Fix alignment of submit button
Every buttons in the user prefs section should be aligned to the content
above.

Part of story #14552: User preferences goes Burning Parrot

--- a/src/www/themes/BurningParrot/css/account/includes/_account-information.scss
+++ b/src/www/themes/BurningParrot/css/account/includes/_account-information.scss
@@ -46,10 +46,6 @@ $avatar-size: 100px;
 
 .account-information-submit {
     padding: $tlp-spacing $tlp-spacing $tlp-spacing ($tlp-double-spacing * 2 + $avatar-size);
-
-    > .account-information-submit-button {
-        margin: 0;
-    }
 }
 
 .account-information-avatar-modal-body {
